any completion candidates.  'minibuffer-choose-completion' ('M-RET')
will still choose a previously-selected completion candidate, but the
new command 'minibuffer-choose-completion-or-exit' (bound by
'minibuffer-visible-completions') will exit with the minibuffer
contents instead.  The deselection behavior can be controlled with the
new user option 'completion-auto-deselect'.

** Pcomplete

---
*** New user option 'pcomplete-remote-file-ignore'.
When this option is non-nil, remote file names are not completed by
Pcomplete.  Packages, like 'shell-mode', could set this in order to
suppress remote file name completion at all.

---
*** Completion for the 'doas' command has been added.
Command completion for 'doas' in Eshell and Shell mode will now work.

** Shell Mode

+++
*** New user option 'shell-get-old-input-include-continuation-lines'.
When this user option is non-nil, 'shell-get-old-input' ('C-RET')
includes multiple shell "\" continuation lines from command output.
Default is nil.

** Make mode

*** The Makefile browser is now obsolete.
The command 'makefile-switch-to-browser' command is now obsolete,
together with related commands used in the "*Macros and Targets*"
buffer.  We recommend using an alternative like 'imenu' instead.

** Prog mode

+++
*** New command 'prog-fill-reindent-defun'.
This command either fills a single paragraph in a defun, such as a
docstring, or a comment, or (re)indents the surrounding defun if
point is not in a comment or a string.  It is by default bound to
'M-q' in 'prog-mode' and all its descendants.

** Which Function mode

+++
*** Which Function mode can now display function names on the header line.
The new user option 'which-func-display' allows choosing where the
function name is displayed.  The default is 'mode' to display in the
mode line.  'header' will display in the header line;
'mode-and-header' displays in both the header line and mode line.

** Tramp

+++
*** New connection methods "toolbox" and "flatpak".